f5/deployments/deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-http
  namespace: f5
spec:
  selector:
    matchLabels:
      app: f5-http
  replicas: 3
  template:
    metadata:
      labels:
        app: f5-http
    spec:
      containers:
        - name: f5-http
          image: f5devcentral/f5-hello-world:develop
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: f5-http
  namespace: f5
spec:
  selector:
    app: f5-http
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
